--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,49 @@
 html {
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 16px;
-    background-image: url("https://source.unsplash.com/random");
+    /* background-image: url("https://source.unsplash.com/random");
     background-size: cover;
-    background-position: center;
+    background-position: center; */
+    background-color: #f1f1f1;
 }
 
 .main-container {
     display: flex;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.8)
+    width: 100vw;
+    height: 100vh;
 }
 
 .main-wrap {
-    width: 960px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1600px;
+
+}
+.site-wrap, .login-wrap, .banner-wrap  {
+    background-color: #fff;
+    width: 400px;
+    height: 800px;
+    border-radius: 100px;
+    box-shadow: 0px 0px 30px #e0e0e0;
+}
+.site-wrap {
+    margin-right: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.login-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.banner-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 80px;
 }
 .apisite {
     text-align: center;
@@ -88,7 +118,7 @@ html {
     text-align: left;
     width: 350px;
     margin: 30px auto;
-    border: 2px solid #606060;
+    border: 1px solid #b6b6b6;
 }
 .loginbutton p {
     color: darkred;
@@ -112,10 +142,10 @@ html {
     padding: 0px 10px;
 }
 .banner1, .banner3, .banner5, .banner7 {
-    background-color: #d3d3d3;
+    background-color: #f1f1f1;
 }
 .banner2, .banner4, .banner6, .banner8 {
-    background-color: rgb(240, 240, 240);
+    background-color: #dddddd;
 }
 textarea {
     font-family: 'Noto Sans KR', sans-serif;
@@ -136,5 +166,30 @@ textarea {
     .anssection {
         display: block;
         margin: 0 auto;
+    }
+    .main-container {
+        display: flex;
+        width: 100vw;
+        justify-content: center;
+    }
+    .main-wrap {
+        display: block;
+        /* width: 100vw; */
+        margin: 0 auto;
+    }
+    .site-wrap {
+        margin-right: 0px;
+        height: 300px;
+        margin-top: 50px;
+    }
+    .login-wrap {
+        height: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 50px;
+    }
+    .banner-wrap {
+        margin: 50px 0;
     }
 }   
