--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@ html {
     background-color: #f1f1f1;
 }
 
+#bannersum, #loginsum {
+    width: 300px;
+}
+#ondate {
+    width: 150px;
+}
+
 .main-container {
     display: flex;
     justify-content: center;
@@ -191,5 +198,11 @@ textarea {
     }
     .banner-wrap {
         margin: 50px 0;
+    }
+    #bannersum, #loginsum {
+        width: 160px;
+    }
+    #ondate {
+        width: 100px;
     }
 }   
